Better routing and overflow bug fix
Made better routing. When you are logged out you are redirected to /home
you can login when your press get started button. When you are logged in you can see other pages in header.
Fixed overflow by changing <button> to <Button>(react-bootstrap package)

--- a/ClientApp/src/components/dashboard_components/WeightGraph.css
+++ b/ClientApp/src/components/dashboard_components/WeightGraph.css
@@ -4,4 +4,5 @@
   margin-left: 33px;
   padding: 20px;
   padding-bottom: 50px;
+  overflow: hidden;
 }
